# superalloy-ml

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dl.txt  requirements-optional.txt  requirements.txt
.github/workflows/: tests.yml
configs/: default.yaml
data/: README.md
data/processed/: featured_superalloy.csv  synthetic_superalloy.csv
docs/: AI辅助说明.md  常见问题.md  数据字段说明.md  特征工程说明.md  算法说明.md  评估指标说明.md  运行说明.md  项目说明.md
notebooks/: README.md
outputs/models/: cnn_classifier.pt  lstm_classifier.pt  mlp_classifier.pt  mlp_regressor.pt  rnn_classifier.pt  transformer_classifier.pt
outputs/predictions/: agglomerative_cluster_embedding.csv  clustering_assignments.csv  dbscan_cluster_embedding.csv  kmeans_cluster_embedding.csv  pca_embedding.csv  single_regression_ridge_predictions.csv  traditional_classification_predictions.csv  traditional_regression_predictions.csv  tsne_embedding.csv
outputs/reports/: clustering_summary.csv  deep_learning_results.csv  summary.json  (+8 more)
scripts/: check_project_structure.py  make_dataset.py  run_all.py  run_clustering.py  run_data_check.py  run_deep_learning.py  run_dimensionality_reduction.py  run_evaluation.py  run_feature_engineering.py  run_shap_analysis.py  run_single_model.py  run_traditional_ml.py
tests/: test_clustering.py  test_data.py  test_deep_learning.py  test_dimensionality_reduction.py  test_evaluation.py  test_explainability.py  test_features.py  test_preprocessing.py  test_project_structure.py  test_reporting.py  test_run_single_model.py  test_traditional_ml.py  test_validation.py
(+37 files in other folders)
