[project]
name = "superalloy-ml"
version = "0.1.0"
description = "高温合金机器学习项目"
requires-python = ">=3.10"
authors = [
    { name = "Your Name" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]